--- a/Home/readME
+++ b/Home/readME
@@ -2,3 +2,4 @@ Are you tired of switching back and forth between different tabe just to compare
 
 Our aim is to display precise but neccesary info about the colleges all around the world.
 On clicking the college name, the info would be displayed.
+At the bottom, you can also compare with 3 popular colleges , i.e. Yale, Princeton and Harvard
